--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
