--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "classnames": "^2.2.5",
     "moment": "^2.18.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-modal": "^2.0.6"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
