--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "firebase": "^4.1.3",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-modal": "^2.0.6"
+    "react-modal": "^2.0.6",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
